@@ -1,4 +1,4 @@
-\font\musicfont=cmsy10
+\font\musicfont=musix16
 \font\slurfont=xslu16
 \def\thefont{\musicfont}
 
